Fixed gap on secondary nav in mobile media query

--- a/a2/style.css
+++ b/a2/style.css
@@ -328,6 +328,11 @@ footer a{
 	nav a{
 		padding: 10px 20px 10px 20px;
 	}
+	
+	nav+nav{
+		top: 38px;
+	}
+	
 	dl{
 		column-count: 1;
 	}
